# incomprehensible

./: .gitignore  README.md  conftest.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
incomprehensible/: __init__.py  dedupe_dictlist.py  dict_pivot.py  flatten_list.py  get_files.py  split_strip_coerce.py
tests/: test_dedupe_dictlist.py  test_dict_pivot.py  test_flatten_list.py  test_get_files.py  test_split_strip_coerce.py
